fixup spacing problems

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -45,6 +45,6 @@ pre code {
     background-color: #262626;
     color: #a6a6a6;
     display: block;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid #1f601f;
 }
